spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -301,7 +301,7 @@ a {
 }
 
 #home-link-logo {
-    width: 100%;
+    width: 110%;
 }
 
 #hero-logo {
@@ -323,6 +323,7 @@ a {
 }
 
 .hero__image-container {
+    overflow: visible;
     position: relative;
     display: flex;
     align-items: flex-end;
